--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=NauJava
+server.port=8080
+management.endpoints.web.exposure.include=*
+
+app.name=NauJava
+app.version=1.0
+
+
