PRACTICAL WORK Databases and ORM Hibernate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,8 @@ management.endpoints.web.exposure.include=*
 app.name=NauJava
 app.version=1.0
 
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/naujava
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
