--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,49 @@
-HELP.md
+### Maven ###
 target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+.mvn/wrapper/
+mvnw
+mvnw.cmd
 
 ### IntelliJ IDEA ###
-.idea
-*.iws
+.idea/
 *.iml
+*.iws
 *.ipr
+out/
+.idea_modules/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+### Eclipse ###
+.settings/
+.classpath
+.project
+bin/
 
 ### VS Code ###
 .vscode/
+*.code-workspace
+
+### OS & Editors ###
+*.swp
+*.swo
+.DS_Store
+*.bak
+*.log
+*.tmp
+*.cache
+
+### Logs ###
+logs/
+*.log
+
+### Build & Dependency ###
+dependency-reduced-pom.xml
+build/
+.gradle/
 
 # Конфиги
 .env
